# MyAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  persona.py
app/agent/: __init__.py  agent.py
app/api/: __init__.py  app.py  miniapp_page.py  schemas.py  telegram_auth.py
app/bot/: __init__.py  cli.py  telegram.py
app/core/: __init__.py  config.py  container.py  events.py  exceptions.py  idempotency.py  lifecycle.py  logger.py  metrics.py  ratelimit.py  subscribers.py
app/database/: __init__.py  database.py  models.py  outbox_publisher.py  repositories.py
app/executor/: __init__.py  executor.py
app/gateway/: __init__.py  gateway.py  payload.py  sanitizer.py
app/llm/: __init__.py  base.py  catalog.py  factory.py  litellm_client.py  mock.py
app/memory/: __init__.py  memory.py  semantic.py  session.py
app/planner/: __init__.py  planner.py
app/router/: __init__.py  router.py
app/tools/: __init__.py  base.py  calculator.py  manager.py  websearch.py
scripts/: smoke_stdlib.py
tests/: conftest.py  test_api.py  test_buttons.py  test_commands.py  test_idempotency.py  test_metrics.py  test_miniapp.py  test_models.py  test_outbox.py  test_persona.py  test_pipeline.py  test_ratelimit.py  test_render.py  test_semantic.py  test_units.py  test_websearch.py
