[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Multi-channel personal AI agent platform (Clean Architecture, event-driven, async)"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
